--- a/Desafios/desafio012/estilo/style.css
+++ b/Desafios/desafio012/estilo/style.css
@@ -1,11 +1,22 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Oswald', sans-serif;
+    --fonte3: 'Kalam', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
 }
 
 html, body {
+    font-family: var(--fonte1);
     background-color: darkgray;
     min-height: 100vh;
 }
@@ -18,6 +29,9 @@ header {
 
 header > h1 {
     padding-top: 50px;
+    font-family: var(--fonte2);
+    font-variant: small-caps;
+    font-size: 10vw;
 }
 
 header > p {
@@ -39,6 +53,9 @@ section {
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
+    font-family: var(--fonte3);
+    font-weight: 500;
+    font-size: 3.5vw;
 }
 
 section.normal {
