--- a/Desafios/desafio012/style.css
+++ b/Desafios/desafio012/style.css
@@ -31,7 +31,7 @@ header > h1 {
     padding-top: 50px;
     font-family: var(--fonte2);
     font-variant: small-caps;
-    font-size: 10vw;
+    font-size: 6vw;
 }
 
 header > p {
@@ -55,7 +55,11 @@ section {
     line-height: 2em;
     font-family: var(--fonte3);
     font-weight: 500;
-    font-size: 3.5vw;
+    font-size: 2vw;
+}
+
+section > p {
+    padding-bottom: 20px;
 }
 
 section.normal {
@@ -65,12 +69,27 @@ section.normal {
 
 section.imagem {
     background-color: rgb(51, 51, 51);
+    background-size: cover;
+    background-attachment: fixed;
     color: white;
+    box-shadow: inset 6px 6px 12px 0px rgba(0, 0, 0, 0.616);
 }
 
 section.imagem > p {
-    width: 400px;
-    background-color: rgba(0, 0, 0, 0.233);
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0.411);
+    padding: 5px;
+    text-shadow: 4px 4px 4px black;
+}
+
+section#img1 {
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+}
+
+section#img2 {
+    background-image: url(imagens/background002.jpg);
+    background-position: right center;
 }
 
 footer {
